--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -27,3 +27,6 @@ $lightblue:rgba(159, 226, 250, 0.5);
 $breakpoints: (sp: "only screen and (max-width:480px)",
 tbl: "only screen and (max-width:896px) and (min-width:481px)"
 );
+
+// Space
+$vertical-lg-space:80px;
