--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -6,7 +6,7 @@ $font-family-sans-serif: "Nunito",
 sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
-$font-color-normal: #333333;
+$font-color-normal: #545454;
 $footer-text-color-normal: #7c7c7c;
 
 // Colors
@@ -15,7 +15,7 @@ $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f1b6ca;
 $red: #e3342f;
-$orange: #f6993f;
+$orange: #ffb66d;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
@@ -23,6 +23,7 @@ $cyan: #6cb2eb;
 
 $lightgray: #c7c7c7;
 $lightblue:rgba(159, 226, 250, 0.5);
+$superlightgray: #eeeeee;
 
 $breakpoints: (sp: "only screen and (max-width:480px)",
 tbl: "only screen and (max-width:896px) and (min-width:481px)"
@@ -30,3 +31,5 @@ tbl: "only screen and (max-width:896px) and (min-width:481px)"
 
 // Space
 $vertical-lg-space:80px;
+$vertical-md-space:40px;
+$vertical-sm-space:20px;
