--- a/resources/sass/_overall.scss
+++ b/resources/sass/_overall.scss
@@ -3,7 +3,7 @@
 @import "mixin";
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC');
+@import url("https://fonts.googleapis.com/css?family=Noto+Serif+SC");
 
 html,
 body,
@@ -19,17 +19,16 @@ p {
     color: $font-color-normal;
 }
 
-
 body {
     .wrapper {
         overflow: hidden;
     }
 
     h1 {
-        font-family: 'Noto Serif SC', serif !important;
+        font-family: "Noto Serif SC", serif !important;
         text-align: center;
-        font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic",
-            sans-serif;
+        font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3",
+            "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
         font-weight: bolder;
     }
 
