主にBuppanFlow紹介ページとLPへの導線を修正

--- a/resources/sass/_overall.scss
+++ b/resources/sass/_overall.scss
@@ -59,3 +59,11 @@ body {
 .lg-section {
     margin: 0 auto $vertical-lg-space;
 }
+
+.md-section {
+    margin: 0 auto $vertical-md-space;
+}
+
+.link-section {
+    margin: 0 auto $vertical-sm-space;
+}
