--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1,1 +1,250 @@
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif+SC);body,div,h1,h2,h3,h4,h5,h6,html,p,span{color:#545454}body .wrapper{overflow:hidden}body h1{font-family:"Noto Serif SC",serif!important;text-align:center;font-family:Hiragino Kaku Gothic ProN,"\30D2\30E9\30AE\30CE\89D2\30B4   ProN W3","\30E1\30A4\30EA\30AA",Meiryo,"\FF2D\FF33   \FF30\30B4\30B7\30C3\30AF",MS PGothic,sans-serif;font-weight:bolder}body h2{margin:80px auto 40px 0;border-color:#ffb66d;border-style:solid;border-width:2px 20px;background:#eee}body h2,body h3{padding:10px 20px}body h3{margin:40px auto;border-left:20px solid #d9230f;border-bottom:2px solid #d9230f}body h4{margin-bottom:20px;color:#545454;font-weight:700}.lg-section{margin:0 auto 80px}.md-section{margin:0 auto 40px}.link-section{margin:0 auto 20px}.login-name{color:#7f8c8d;display:block;padding:.5rem 1rem}.list-icon{display:inline-block;width:2rem;padding:0 2rem 0 .5rem;margin-right:1rem;font-size:1rem;text-align:center}footer{background-color:#34495e;color:#fff}footer li,footer li .nav-item{margin-left:20px}footer li .nav-item-footer-nolink{color:#7c7c7c}footer a.footer-link{color:grey}footer .external-light{color:#f39c12}.main-title{margin:80px auto}.main-title h1{font-weight:700}.job-card{margin-bottom:40px}.job-card .card-subtitle{font-weight:700}.job-card .card-desc{margin-bottom:20px}.card-img{width:60%}.myskillitems{grid-template-columns:repeat(auto-fill,minmax(300px,1fr));grid-row-gap:15px;grid-column-gap:1px;margin:10px auto 55px}.myskillitem,.myskillitems{display:grid;grid-template-rows:50px}.myskillitem{grid-template-columns:50px 250px;margin:0 auto}.skillicon{width:50px;height:50px;-o-object-fit:contain;object-fit:contain}.skillname{font-family:"Bree Serif",serif;width:250px;height:50px;font-size:1.4rem;padding-left:20px;margin:5px auto}.lg-section-main-image{text-align:center}.lg-section-main-image img{width:60%}.tech-grid{display:grid;justify-content:center;grid-template-columns:380px 380px 380px;grid-template-rows:auto auto}@media only screen and (max-width:896px) and (min-width:481px){.tech-grid{grid-template-columns:380px 380px;grid-template-rows:auto auto auto}}@media only screen and (max-width:480px){.tech-grid{grid-template-columns:380px;grid-template-rows:auto auto auto}}.tech-grid .tech-card{margin:0 10px 20px}
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif+SC);@charset "UTF-8";
+
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  color: #545454;
+}
+
+body .wrapper {
+  overflow: hidden;
+}
+
+body h1 {
+  font-family: "Noto Serif SC", serif !important;
+  text-align: center;
+  font-family: "Hiragino Kaku Gothic ProN", "\30D2\30E9\30AE\30CE\89D2\30B4   ProN W3", "\30E1\30A4\30EA\30AA", Meiryo, "\FF2D\FF33   \FF30\30B4\30B7\30C3\30AF", "MS PGothic", sans-serif;
+  font-weight: bolder;
+}
+
+body h2 {
+  padding: 10px 20px;
+  margin: 80px auto 40px 0;
+  border-right: solid 20px #ffb66d;
+  border-top: solid 2px #ffb66d;
+  border-left: solid 20px #ffb66d;
+  border-bottom: solid 2px #ffb66d;
+  background: #eeeeee;
+}
+
+body h3 {
+  padding: 10px 20px;
+  margin: 40px auto;
+  border-left: solid 20px #d9230f;
+  border-bottom: solid 2px #d9230f;
+}
+
+body h4 {
+  margin-bottom: 20px;
+  color: #545454;
+  font-weight: bold;
+}
+
+.lg-section {
+  margin: 0 auto 80px;
+}
+
+.md-section {
+  margin: 0 auto 40px;
+}
+
+.link-section {
+  margin: 0 auto 20px;
+}
+
+.login-name {
+  color: #7f8c8d;
+  display: block;
+  padding: 0.5rem 1rem;
+}
+
+.list-icon {
+  display: inline-block;
+  width: 2rem;
+  padding: 0 2rem 0 0.5rem;
+  margin-right: 1rem;
+  font-size: 1rem;
+  text-align: center;
+}
+
+footer {
+  background-color: #34495e;
+  color: #fff;
+}
+
+footer li {
+  margin-left: 20px;
+}
+
+footer li .nav-item {
+  margin-left: 20px;
+}
+
+footer li .nav-item-footer-nolink {
+  color: #7c7c7c;
+}
+
+footer a.footer-link {
+  color: gray;
+}
+
+footer .external-light {
+  color: #f39c12;
+}
+
+/* ============================================================
+  top view
+===============================================================*/
+
+#topview {
+  background: url(/images/hero-img_1920.jpg?0f6074c445f8be84df4201d320d6aaf0) no-repeat center top fixed;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+}
+
+#toplogo {
+  padding-top: 18vh;
+  flex: 1;
+  bottom: 0;
+}
+
+#toplogo img {
+  width: 400px;
+  height: auto;
+}
+
+#subtitle {
+  font-family: "Kokoro";
+  font-size: 2rem;
+  text-shadow: 0 0 7px gray;
+  color: white;
+  flex: 4;
+}
+
+@media only screen and (max-width:480px) {
+  #topview {
+    height: 30vh;
+  }
+
+  #toplogo {
+    padding-top: 5vh;
+  }
+
+  #toplogo img {
+    width: 280px;
+    height: auto;
+  }
+
+  #subtitle {
+    font-size: 1.2rem;
+  }
+}
+
+#down {
+  min-width: 100px;
+  max-width: 200px;
+  flex: 1;
+}
+
+.main-title {
+  margin: 80px auto;
+}
+
+.main-title h1 {
+  font-weight: bold;
+}
+
+.job-card {
+  margin-bottom: 40px;
+}
+
+.job-card .card-subtitle {
+  font-weight: bold;
+}
+
+.job-card .card-desc {
+  margin-bottom: 20px;
+}
+
+.card-img {
+  width: 60%;
+}
+
+.myskillitems {
+  display: grid;
+  grid-template-rows: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-row-gap: 15px;
+  grid-column-gap: 1px;
+  margin: 10px auto 55px;
+}
+
+.myskillitem {
+  display: grid;
+  grid-template-rows: 50px;
+  grid-template-columns: 50px 250px;
+  margin: 0 auto;
+}
+
+.skillicon {
+  width: 50px;
+  height: 50px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.skillname {
+  font-family: "Bree Serif", serif;
+  line-height: 1.8rem;
+  width: 250px;
+  height: 50px;
+  font-size: 1.4rem;
+  padding-left: 20px;
+  margin: 5px auto;
+}
+
+.lg-section-main-image {
+  text-align: center;
+}
+
+.lg-section-main-image img {
+  width: 60%;
+}
+
+.tech-grid {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 380px 380px 380px;
+  grid-template-rows: auto auto;
+}
+
+@media only screen and (max-width:896px) and (min-width:481px) {
+  .tech-grid {
+    grid-template-columns: 380px 380px;
+    grid-template-rows: auto auto auto;
+  }
+}
+
+@media only screen and (max-width:480px) {
+  .tech-grid {
+    grid-template-columns: 380px;
+    grid-template-rows: auto auto auto;
+  }
+}
+
+.tech-grid .tech-card {
+  margin: 0 10px 20px;
+}
+
